# rose_system_validation

./: CMakeLists.txt  TF validation.ods  package.xml  rosdep.yaml  setup.py
ar_track_alvar_2d_56x56_with_kinect/: marker_grid.csv
ar_track_alvar_2d_56x56_with_softkinectic_depthsense325/: marker_grid.csv
data_ar_kinect_45x45mm/: marker89_TO_camera_rgb_frame.csv
data_aruco_ros_45x45mm/: aruco_marker_frame_TO_camera_rgb_frame.csv  aruco_transformed_marker_frame_TO_camera_rgb_frame.csv
launch/: cockpit_side.launch  robot_side.lauch  robot_side.launch  wlan.launch
notebooks/: Wlan_analysis.ipynb
src/: analyze_tracker_range.py  arm_test.py  laser_validation.py  navigation_test.py  tf_check.py
src/rose_system_validation/: recorder.py  setup.py
src/rose_system_validation/wlan/: rostopic.py  throughput.py  wlan.py
tf_data/: tf_check_data.csv
