<?xml version="1.0"?>
<package>
  <name>rose_system_validation</name>
  <version>0.0.0</version>
  <description>The rose_system_validation package</description>

  <maintainer email="beek@robot-rose.nl">tsr</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>

  <export>
  </export>
</package>